Chore(Resources): Manage resources
- Add necessary string resources
- Add Image size dimensions

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,4 +34,10 @@
     <dimen name="elevation_small">2dp</dimen>
     <dimen name="elevation_normal">4dp</dimen>
     <dimen name="elevation_large">6dp</dimen>
+
+    <!--Image Sizes -->
+    <dimen name="image_small">30dp</dimen>
+    <dimen name="image_medium">50dp</dimen>
+    <dimen name="image_large">80dp</dimen>
+    <dimen name="image_extra_large">100dp</dimen>
 </resources>
