--- a/app/src/main/res/layout/item_engineer.xml
+++ b/app/src/main/res/layout/item_engineer.xml
@@ -4,31 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingHorizontal="@dimen/margin_normal"
     android:background="?attr/selectableItemBackground">
 
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="@dimen/margin_normal"
-        android:src="@drawable/ic_person"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile_image_container"
+        android:layout_width="@dimen/image_medium"
+        android:layout_height="@dimen/image_medium"
+        app:cardBackgroundColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/black"
-        tools:ignore="ContentDescription" />
+        app:cardCornerRadius="@dimen/margin_small"
+        app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/engineer_profile_img"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_person"
+            app:tint="@color/black" />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/name"
         style="@style/Material.Body1.Medium.Dark"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_normal"
+        android:layout_marginStart="@dimen/margin_small"
         android:layout_marginTop="@dimen/margin_normal"
-        android:layout_marginEnd="@dimen/margin_normal"
         app:layout_constraintBottom_toTopOf="@id/role"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/profile_image"
+        app:layout_constraintStart_toEndOf="@id/profile_image_container"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         tools:text="Developer name" />
@@ -38,13 +47,12 @@
         style="@style/Material.Body2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_normal"
-        android:layout_marginEnd="@dimen/margin_normal"
+        android:layout_marginStart="@dimen/margin_small"
         android:layout_marginBottom="@dimen/margin_normal"
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/profile_image"
+        app:layout_constraintStart_toEndOf="@id/profile_image_container"
         app:layout_constraintTop_toBottomOf="@id/name"
         tools:text="Developer role" />
 
