--- a/app/src/main/res/navigation/navigation_main.xml
+++ b/app/src/main/res/navigation/navigation_main.xml
@@ -22,8 +22,19 @@
         android:name="com.glucode.about_you.about.AboutFragment"
         android:label="@string/about_screen_title"
         tools:layout="@layout/fragment_about" >
+
+
         <argument
             android:name="name"
             app:argType="string" />
+        <argument
+            android:name="role"
+            app:argType="string" />
+        <argument
+            android:name="image_uri"
+            app:argType="string" />
+        <argument
+            android:name="quick_stats"
+            app:argType="com.glucode.about_you.engineers.models.QuickStats" />
     </fragment>
 </navigation>
